# artcraft

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Tiltfile  app_config.yaml  codegen_database.sh  diesel.toml  execute_all_tests_and_lints.sh  package-lock.json  package.json  service_cpu.Dockerfile  service_gpu.Dockerfile
crates/_types/buckets/: Cargo.toml
crates/_types/buckets/src/: lib.rs
crates/_types/buckets/src/private/: mod.rs
crates/_types/buckets/src/public/: mod.rs
crates/_types/buckets/src/util/: hashed_directory_path_short_string.rs  mod.rs
crates/_types/composite_identifiers/: Cargo.toml
crates/_types/enums/: Cargo.toml
crates/_types/enums/src/: test_helpers.rs
crates/_types/enums/src/by_table/: mod.rs
crates/_types/enums/src/macros/: impl_mysql_enum_coders.rs  impl_mysql_from_row.rs
crates/_types/enums/src/no_table/: mod.rs
crates/_types/enums/src/traits/: mysql_from_row.rs
crates/_types/enums/tests/: list_available_api_tokens_for_user.rs  test_compile_query.rs
crates/_types/reusable_types/: Cargo.toml
crates/_types/reusable_types/src/: server_environment.rs
crates/_types/tokens/: Cargo.toml
crates/_types/tokens/src/: avt.rs  deterministic_rng.rs  lib.rs  macros.rs  prefixes.rs
crates/_types/tokens/src/macros/: impl_mysql_token_from_row.rs
crates/_types/tokens/src/tokens/: media_files.rs  mod.rs  model_weights.rs  password_reset.rs  user_bookmarks.rs
crates/_types/tokens/src/traits/: mysql_token_from_row.rs
crates/_types/tokens/tests/: media_file_token_tests.rs  media_upload_token_tests.rs  test_compile_query.rs  user_token_tests.rs
crates/api_clients/cloud_storage/: Cargo.toml
crates/api_clients/grok_client/: Cargo.toml
crates/api_clients/grok_client/src/: lib.rs
crates/api_clients/grok_client/src/client/: browser_user_agents.rs  mod.rs
crates/api_clients/grok_client/src/credentials/: grok_client_secrets.rs  grok_cookies.rs  grok_full_credentials.rs  grok_user_data.rs  mod.rs
crates/api_clients/grok_client/src/datatypes/: file_upload_spec.rs  mod.rs
crates/api_clients/grok_client/src/error/: grok_client_error.rs  grok_error.rs  grok_generic_api_error.rs  grok_specific_api_error.rs  mod.rs
crates/api_clients/grok_client/src/recipes/: mod.rs  prompt_websocket_image_with_retry.rs  request_client_secrets.rs  upload_image_and_generate_video.rs  upload_image_and_generate_video_with_retry.rs
crates/api_clients/grok_client/src/requests/: mod.rs
crates/api_clients/grok_client/src/test_utils/: get_test_cookies.rs  mod.rs  setup_test_logging.rs
crates/api_clients/grok_client/src/types/: file_id.rs  mod.rs  user_id.rs
crates/api_clients/grok_client/src/utils/: create_firefox_client.rs  mod.rs  parse_verification_token_from_html.rs  parser.rs  scrub_blobs_for_debug_logging.rs  user_and_file_id_to_image_url.rs  user_and_file_id_to_video_url.rs  verification_token_to_anim.rs
crates/api_clients/grok_client/test_data/websocket_messages/: create_image_complete_response.json  create_image_in_progress_response.json  create_image_request.json  other_type.json  wire.json  wire_formatted.json
crates/api_clients/grok_client/tests/: test_base64_encoding.rs
crates/api_clients/midjourney_client/: Cargo.toml
crates/api_clients/midjourney_client/src/: lib.rs
crates/api_clients/midjourney_client/src/client/: midjourney_hostname.rs  mod.rs
crates/api_clients/midjourney_client/src/credentials/: cookie_names.rs  cookie_store_has_auth_cookies.rs  jwt_decode.rs  midjourney_user_id.rs  mod.rs
crates/api_clients/midjourney_client/src/endpoints/: get_index_page_html.rs  imagine.rs  mod.rs  storage_list.rs  (+2 more)
crates/api_clients/openai_sora_client/: Cargo.toml
crates/api_clients/openai_sora_client/src/: credentials.rs  lib.rs  sora_error.rs
crates/api_clients/seedance2pro/: Cargo.toml
crates/api_clients/seedance2pro/src/: lib.rs
crates/api_clients/thumbnail_generator/: Cargo.toml
crates/app/storyteller-vc/: .gitignore  Cargo.toml
crates/app/storyteller-vc/src/: main.rs
crates/cli/database-backup/: Cargo.toml
crates/cli/database-backup/src/: main.rs
crates/cli/database-cleanup/: Cargo.toml
crates/cli/database-cleanup/src/: main.rs
crates/cli/dev-database-seed/: Cargo.toml
crates/cli/dev-database-seed/src/: bucket_clients.rs  cli_args.rs  main.rs
crates/cli/dev-upload-media-file/: Cargo.toml
crates/cli/dev-upload-media-file/src/: cli_args.rs  main.rs
crates/cli/elasticsearch-cli/: Cargo.toml
crates/cli/elasticsearch-cli/src/: cli_args.rs
crates/cli/lru-delete-models/: Cargo.toml
crates/cli/migration-tool/: Cargo.toml
crates/cli/migration-tool/src/: deps.rs  main.rs
crates/cli/scrape_test/: Cargo.toml
crates/cli/scrape_test/src/: main.rs
crates/cli/so_vits_svc_onnx_inference/: Cargo.toml
crates/cli/so_vits_svc_onnx_inference/src/: main.rs
crates/desktop/artcraft/: Cargo.toml  tauri-dev-hot-reload.conf.json  tauri-dev-static.conf.json  tauri-mac.conf.json  tauri.artcraft_3d.conf.toml  tauri.artcraft_3d.no_dev.conf.json  tauri.artcraft_3d.no_dev.conf.toml  tauri.artcraft_3d.no_dev_prod_preview.conf.json  tauri.artcraft_3d.no_dev_windows.conf.json  tauri.conf.json  tauri2.conf.json
crates/desktop/artcraft/capabilities/: default.json
crates/desktop/artcraft/src/: lib.rs
crates/desktop/ml_models/: Cargo.toml
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/src/: image_endpoint.rs  lib.rs  model_config.rs  sd.rs
crates/desktop/tauri-artcraft/: Cargo.toml  tauri.artcraft_2d.conf.toml  tauri.artcraft_3d.conf.toml  tauri.conf.json
crates/desktop/tauri-artcraft/capabilities/: default.json
crates/desktop/tauri-artcraft/icons/: icon.icns
crates/desktop/tauri-artcraft/src/: lib.rs  main.rs
crates/lib/actix_artcraft/: Cargo.toml
crates/lib/actix_artcraft/src/: lib.rs
crates/lib/actix_cors_configs/: Cargo.toml
crates/lib/actix_helpers/: Cargo.toml
crates/lib/actix_helpers/src/: route_builder.rs
crates/lib/artcraft_router/: Cargo.toml
crates/lib/artcraft_router/src/: lib.rs
crates/lib/artcraft_router/tests/: artcraft_seedance_2p0.rs
(+6961 files in other folders)
