[workspace]

members = [
  # Types: common strongly-typed tokens, ids, payloads, etc.
  # Also common cloud buckets and other "strongly typed" configs.
  "crates/_types/buckets",
  "crates/_types/enums",
  "crates/_types/reusable_types", # TODO(bt, 2022-12-21): Deprecate
  "crates/_types/tokens",

  # CLI tools for operations, etc.
  "crates/cli/database_backup",
  "crates/cli/database_cleanup",
  "crates/cli/dev_database_seed",
  "crates/cli/dev_upload_media_file",
  "crates/cli/kubectl_pod_cleanup",
  "crates/cli/scrape_test",

  # Shared libraries
  "crates/lib/actix_helpers",
  "crates/lib/api_clients/cloud_storage",
  "crates/lib/api_clients/google_drive_common",
  "crates/lib/api_clients/twitch_common",
  "crates/lib/bootstrap",
  "crates/lib/caching/memory_caching",
  "crates/lib/caching/redis_caching",
  "crates/lib/concurrency",
  "crates/lib/cookies",
  "crates/lib/crockford_deprecated",
  "crates/lib/datetimes",
  "crates/lib/deprecated/config", # TODO(bt, 2023-02-13): Deprecate or repurpose
  "crates/lib/deprecated/container_common", # TODO(bt, 2023-02-13): Pull apart and rehome pieces
  "crates/lib/deprecated/http_server_common", # TODO(bt, 2023-03-20): Move useful pieces to actix_helpers
  "crates/lib/easyenv", # NB: Vendored version of https://github.com/echelon/easyenv.rs that we'll improve.
  "crates/lib/errors",
  "crates/lib/files/archives",
  "crates/lib/files/filesys",
  "crates/lib/files/hashing",
  "crates/lib/files/images",
  "crates/lib/files/media",
  "crates/lib/files/mimetypes",
  "crates/lib/idempotency",
  "crates/lib/jobs_common",
  "crates/lib/mysql_queries",
  "crates/lib/redis_common",
  "crates/lib/server_environment",
  "crates/lib/sqlx_mysql_helpers",
  "crates/lib/storyteller_root",
  "crates/lib/subprocess_common",
  "crates/lib/testing",
  "crates/lib/tts_common",
  "crates/lib/url_config",
  "crates/lib/user_input_common",
  "crates/lib/web_scrapers",
  #"crates/lib/api_clients/fakeyou_client",
  #"crates/lib/sqlite_queries",

  # Programs: Desktop apps
  #"crates/programs/aichatbot-sidecar",

  # Services: API servers, jobs, workers, etc.
  "crates/service/job/analytics_job",
  "crates/service/job/download_job",
  "crates/service/job/inference_job",
  "crates/service/job/tts_download_job",
  "crates/service/job/tts_inference_job",
  "crates/service/job/w2l_download_job",
  "crates/service/job/w2l_inference_job",
  "crates/service/other/twitch_pubsub_subscriber",
  "crates/service/web/dummy_service",
  "crates/service/web/storyteller_web",
  "crates/service/web/websocket_gateway",

  # Service Plugins: complete subsystems that can be plugged into services (users, billing, etc.)
  "crates/service/plugins/billing",
  "crates/service/plugins/inference_workloads",
  "crates/service/plugins/users",

  # Vendored code
  "crates/vendor/newrelic-telemetry-sdk-rust",
]
