[package]
name = "composite_identifiers"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "composite_identifiers"
path = "src/lib.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["my-workspace-hack"]

[dependencies]
# Internal
enums = { path = "../enums" }
tokens = { path = "../tokens" }

# Workspace hack (faster compile times)
my-workspace-hack = { version = "0.1", path = "../../my-workspace-hack" }

# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"

sqlx = { version = "0.8.2", features = [ "mysql", "sqlite", "runtime-tokio-native-tls", "chrono" ] }
sqlx-core = { version = "0.8.2" }
sqlx-mysql= { version = "0.8.2" }

utoipa = { version = "4", features = ["chrono","actix_extras"] }

[dev-dependencies]

# Test serialization
serde_json = "1.0.108"
