[package]
name = "enums"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "enums"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"

# MySql Database
# "offline" supports typesafe builds without a live database
# "rustls" doesn't appear to work with IP addresses, per:
# https://github.com/launchbadge/sqlx/issues/1095#issuecomment-798050828
sqlx = { version = "0.6.2", features = [ "mysql", "sqlite", "runtime-actix-native-tls", "offline", "chrono" ] }
sqlx-core = { version = "0.6.2" }
my-workspace-hack = { version = "0.1", path = "../../../my-workspace-hack" }

[dev-dependencies]

# Enum utilities
strum = { version = "0.25", features = ["derive"] }

# Test serialization
serde_json = "1.0.108"
toml = "0.5.8"
