[package]
name = "enums"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "enums"
path = "src/lib.rs"

[dependencies]
# Internal

# Workspace hack (faster compile times)
my-workspace-hack = { version = "0.1", path = "../../my-workspace-hack" }

# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"

sqlx = { version = "0.7.2", features = ["mysql", "runtime-tokio", "tls-rustls", "chrono" ] }
sqlx-core = { version = "0.7.2" }
sqlx-mysql= { version = "0.7.2" }

utoipa = { version = "4", features = ["chrono","actix_extras"] }

[dev-dependencies]

# Enum utilities
strum = { version = "0.25", features = ["derive"] }

# Test serialization
serde_json = "1.0.108"
toml = "0.5.8"
