[package]
name = "tokens"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "tokens"
path = "src/lib.rs"

[dependencies]

# Internal
# (none)

# Workspace hack (faster compile times)
my-workspace-hack = { version = "0.1", path = "../../my-workspace-hack" }

# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"

# Random
rand = {  version = "0.8.5", features = ["std_rng"] }

once_cell = { version = "1.18.0", features = [] }

sqlx = { version = "0.7.2", features = [ "mysql", "runtime-tokio", "tls-rustls", "chrono" ] }
sqlx-core = { version = "0.7.2" }

utoipa = { version = "4", features = ["chrono","actix_extras"] }

[dev-dependencies]

# Enum utilities
strum = { version = "0.25", features = ["derive"] }

# Test serialization
serde_json = "1.0.108"
toml = "0.5.8"
