[package]
name = "grok_client"
edition = "2024"
version = "0.0.1"
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[lib]
name = "grok_client"
path = "src/lib.rs"

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal
cloudflare_errors.workspace = true
cloudflare_mitigation.workspace = true
cookie_store.workspace = true
errors.workspace = true

# External
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
url.workspace = true
uuid.workspace = true
wreq-util.workspace = true
wreq.workspace = true

[dev-dependencies]
filesys.workspace = true
test_data.workspace = true
testing.workspace = true
log4rs = "1.4.0"
env_logger.workspace = true
env.workspace = true
chrono.workspace = true

