[package]
name = "midjourney_client"
edition = "2024"
version = "0.0.1"
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[lib]
name = "midjourney_client"
path = "src/lib.rs"

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal
cloudflare_errors.workspace = true
errors.workspace = true

# External
anyhow.workspace = true
futures.workspace = true
log.workspace = true
reqwest-websocket.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
testing = { path = "../../lib/testing" }
test_data.workspace = true
