[package]
name = "midjourney_client"
edition = "2024"
version = "0.0.1"
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[lib]
name = "midjourney_client"
path = "src/lib.rs"

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal
cloudflare_errors.workspace = true
cookie_store.workspace = true
errors.workspace = true

# External
anyhow.workspace = true
futures.workspace = true
log.workspace = true
#reqwest-websocket.workspace = true
#reqwest.workspace = true
#reqwest-impersonate = { version = "0", features = ["websocket"] }
serde.workspace = true
serde_json.workspace = true
#tokio.workspace = true
url.workspace = true

# NB: wreq gets past fingerprinting, but we have to deal with platform-specific build issues.
# Mac: brew install --formula cmake pkg-config llvm
wreq = { version = "5", features = ["json"] }
wreq-util = "2"
tokio = { version = "1", features = ["full"] }

# NB: We need to parse HTML to get out the websocket token
dom_query = "0.20.2"

[dev-dependencies]
filesys.workspace = true
test_data.workspace = true
testing.workspace = true
