[package]
name = "openai_sora_client"
edition = "2024"
version = "0.0.1"
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[lib]
name = "openai_sora_client"
path = "src/lib.rs"

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal
errors.workspace = true
idempotency.workspace = true

# External
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
cloudflare_errors.workspace = true
cookie.workspace = true
log.workspace = true
once_cell.workspace = true
rand.workspace = true
#reqwest = { workspace = true, features = ["multipart", "gzip"] }
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
#tokio.workspace = true
toml.workspace = true
url.workspace = true

tokio = { version = "1", features = ["full"] }
wreq-util.workspace = true
wreq.workspace = true

[dev-dependencies]
testing = { path = "../../lib/testing" }
