[package]
name = "seedance2pro"
edition = "2024"
version = "0.0.1"
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[lib]
name = "seedance2pro"
path = "src/lib.rs"

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal
errors.workspace = true

# External
cloudflare_errors.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
wreq.workspace = true
wreq-util.workspace = true
url.workspace = true

[dev-dependencies]
testing = { path = "../../lib/testing" }
