[package]
name = "seedance2pro"
edition = "2024"
version = "0.0.1"
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[lib]
name = "seedance2pro"
path = "src/lib.rs"

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal
errors.workspace = true

# External
chrono.workspace = true
cloudflare_errors.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
wreq-util.workspace = true
wreq.workspace = true
url.workspace = true

[dev-dependencies]
chrono.workspace = true
env.workspace = true
env_logger.workspace = true
testing = { path = "../../lib/testing" }
tokio = { version = "1", features = ["full"] }
