[package]
name = "thumbnail_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal
easyenv = { path = "../../lib/easyenv" }

# External
log.workspace = true
reqwest = {  version = "0.12.4", default-features = false, features = [ "charset", "http2", "system-proxy", "rustls-tls" ] }
serde_json.workspace = true
