[package]
name = "storyteller-vc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.4.2"
ringbuf = "0.2.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.13.5", features=["wasm-bindgen"] }
wasm-bindgen = "0.2.45"
web-sys = { version = "0.3.22", features=["console"] }
console_error_panic_hook = "0.1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.13.5"



[workspace]
