[package]
name = "storyteller-recast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.4.2"
ringbuf = "0.2.8"
native-dialog = "0.6.3"
tch = "0.8.0"
hound = "3.4.0"
iced_native = "0.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.13.5", features=["wasm-bindgen"] }
wasm-bindgen = "0.2.45"
web-sys = { version = "0.3.22", features=["console"] }
console_error_panic_hook = "0.1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.13.5"



[workspace]
