[package]
name = "elasticsearch-cli"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[[bin]]
name = "elasticsearch-cli"
path = "src/main.rs"

[dependencies]
# Internal
buckets = { path = "../../_types/buckets" }
config = { path = "../../lib/deprecated/config" }
easyenv = { path = "../../lib/easyenv" }
elasticsearch_schema = { path = "../../lib/elasticsearch_schema" }
enums = { path = "../../_types/enums" }
errors = { path = "../../lib/errors" }
mysql_queries = { path = "../../lib/mysql_queries" }
storyteller_root = { path = "../../lib/storyteller_root" }
tokens = { path = "../../_types/tokens" }

# External
log = "0.4.14"
clap = "2.34.0" # TODO: This is really out of date, but has conflicts when updated
strum = { version = "0.25", features = ["derive"] }

# Runtime
# NB: We switched to Tokio from `async-std` for broader ecosystem support.
tokio = { version = "1.6.0", features = ["macros"] }

# MySql Database
# "offline" supports typesafe builds without a live database
# "rustls" doesn't appear to work with IP addresses, per:
# https://github.com/launchbadge/sqlx/issues/1095#issuecomment-798050828
sqlx = { version = "0.6.2", features = [ "mysql", "runtime-actix-native-tls", "offline", "chrono" ] }

elasticsearch = "8.5.0-alpha.1"

# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.108"
my-workspace-hack = { version = "0.1", path = "../../../my-workspace-hack" }

[dev-dependencies]
# None yet
